tests/neg-custom-args/captures/effect-swaps.check
-- Error: tests/neg-custom-args/captures/effect-swaps.scala:62:6 -------------------------------------------------------
61 |    Result:
62 |      Future: // error, escaping label from Result
   |    ^
   |local reference contextual$1 from (using contextual$1: boundary.Label[box Result[box Future[box T^?]^{fr, contextual$1, contextual$1}, box E^?]^?]^):
   |  box Result[box Future[box T^?]^{fr, contextual$1, contextual$1}, box E^?]^? leaks into outer capture set of type parameter T of method apply in object boundary
63 |        fr.await.ok
   |--------------------------------------------------------------------------------------------------------------------
   |Inline stack trace
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from effect-swaps.scala:37
37 |    boundary:
   |    ^^^^^^^^
    --------------------------------------------------------------------------------------------------------------------
-- Error: tests/neg-custom-args/captures/effect-swaps.scala:66:11 ------------------------------------------------------
66 |    Result.make: // error, escaping label from Result
   |    ^^^^^^^^^^^
   |local reference contextual$9 from (using contextual$9: boundary.Label[Result[box Future[box T^?]^{fr, contextual$9}, box E^?]]^):
   |  box Future[box T^?]^{fr, contextual$9} leaks into outer capture set of type parameter T of method make in object Result
